[package]
name = "url_listen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["tokio"] }
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.17.1"
regex = "1.7.3"
tokio = { version = "1.27.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
